# urltemplate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/urltemplate/: __init__.py  _encode.py  _errors.py  _expand.py  _parser.py
tests/: test_composite.py  test_encoding.py  test_errors.py  test_query.py
