[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urltemplate"
version = "0.1.0"
description = "Zero-dependency RFC 6570 URI Template expansion (levels 1-3)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nripankadas07" }]
requires-python = ">=3.9"
keywords = ["rfc6570", "uri-template", "url-template", "uri", "url", "expand", "rest", "hateoas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/urltemplate"
Issues = "https://github.com/nripankadas07/urltemplate/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
urltemplate = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
